--- a/index.html
+++ b/index.html
@@ -6,6 +6,33 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="head-tabs">
+        <h2 id="first-tab">first tab</h2>
+        <h2 id="second-tab"> second tab</h2>
+        <h2 id="threth-tab">threth tab</h2>
+        <h2 id="forth-tab">forth tab</h2>
+        <h2 id="fith-tab">fith tab</h2>
+        <h2 id="sixt-tab">sixt tab</h2>
+    </div>
+    <div class="main-tabs-content">
+        <section id="first-tab-content">
+            <img src="src/pictures/first.png">
+        </section>
+        <section id="second-tab-content">
+            <img src="">
+        </section>
+        <section id="threth-tab-content">
+            <img src="">
+        </section>
+        <section id="forth-tab-content">
+            <img src="">
+        </section>
+        <section id="fith-tab-content">
+            <img src="">
+        </section>
+        <section id="sixt-tab-content">
+            <img src="">
+        </section>
+    </div>
 </body>
 </html>
