--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Style.css">
+    <script src="project.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div class="head-tabs">
-        <h2 id="first-tab">first tab</h2>
+        <h2 id="first-tab" onclick="onClick(this.id)">first tab</h2>
         <h2 id="second-tab"> second tab</h2>
         <h2 id="threth-tab">threth tab</h2>
         <h2 id="forth-tab">forth tab</h2>
