--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
 <body>
     <div class="head-tabs">
         <h2 id="first-tab" onclick="onClick(this.id)">first tab</h2>
-        <h2 id="second-tab"> second tab</h2>
+        <h2 id="second-tab" onclick="onClick(this.id)"> second tab</h2>
         <h2 id="threth-tab">threth tab</h2>
         <h2 id="forth-tab">forth tab</h2>
         <h2 id="fith-tab">fith tab</h2>
         <h2 id="sixt-tab">sixt tab</h2>
     </div>
     <div class="main-tabs-content">
-        <section id="first-tab-content">
+        <section class="tab" id="first-tab-content">
             <img src="src/pictures/first.png">
         </section>
-        <section id="second-tab-content">
+        <section class="tab" id="second-tab-content">
+            <img src="src/pictures/second.png">
+        </section>
+        <section class="tab" id="threth-tab-content">
+            <img src="src/pictures/thre.png">
+        </section>
+        <section class="tab" id="forth-tab-content">
             <img src="">
         </section>
-        <section id="threth-tab-content">
+        <section class="tab" id="fith-tab-content">
             <img src="">
         </section>
-        <section id="forth-tab-content">
-            <img src="">
-        </section>
-        <section id="fith-tab-content">
-            <img src="">
-        </section>
-        <section id="sixt-tab-content">
+        <section class="tab" id="sixt-tab-content">
             <img src="">
         </section>
     </div>
