--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="head-tabs">
         <h2 id="first-tab" onclick="onClick(this.id)">first tab</h2>
         <h2 id="second-tab" onclick="onClick(this.id)"> second tab</h2>
-        <h2 id="threth-tab">threth tab</h2>
-        <h2 id="forth-tab">forth tab</h2>
-        <h2 id="fith-tab">fith tab</h2>
-        <h2 id="sixt-tab">sixt tab</h2>
+        <h2 id="threth-tab" onclick="onClick(this.id)">threth tab</h2>
+        <h2 id="forth-tab" onclick="onClick(this.id)">forth tab</h2>
+        <h2 id="fith-tab" onclick="onClick(this.id)">fith tab</h2>
+        <h2 id="sixt-tab" onclick="onClick(this.id)">sixt tab</h2>
     </div>
     <div class="main-tabs-content">
         <section class="tab" id="first-tab-content">
@@ -27,13 +27,13 @@
             <img src="src/pictures/thre.png">
         </section>
         <section class="tab" id="forth-tab-content">
-            <img src="">
+            <img src="src/pictures/forth.png">
         </section>
         <section class="tab" id="fith-tab-content">
-            <img src="">
+            <img src="src/pictures/fith.png">
         </section>
         <section class="tab" id="sixt-tab-content">
-            <img src="">
+            <img src="src/pictures/sixt.png">
         </section>
     </div>
 </body>
